<resources>
    <string name="app_name">龙猫音乐</string>
    <string name="noMusic">无音乐</string>
    <string name="localMusic">本地音乐</string>
    <string name="onlineMusic">在线音乐</string>
    <string name="shareTo">分享到</string>
    <string name="setting">设置</string>
    <string name="download">下载</string>
    <string name="share">分享</string>
    <string name="areYouSure">你真的要离开龙猫音乐吗？</string>
    <string name="nightMode">夜间模式</string>
    <string name="shareApp">分享龙猫音乐</string>
    <string name="exit">退出应用</string>
    <string name="clickAgainExit">再点击一次退出</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="timeStart">00:00</string>
    <string name="more">更多操作</string>
    <string name="artistInfo">歌手信息</string>
    <string name="shareMusic">我用龙猫音乐分享了</string>
    <string name="searchSome">搜索你想听的音乐或者你关心的歌手</string>
    <string name="noMore">没有更多了</string>
    <string name="load">加载中...</string>
    <string name="load1">1.加载中...</string>
    <string name="load2">2.加载中...</string>
    <string name="load3">3.加载中...</string>
    <string name="unKnow">未知</string>
</resources>
