<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fl_item_content"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="8dp"
    android:layout_marginTop="15dp"
    android:background="@drawable/item_click_bg"
    android:backgroundTint="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_song_type"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@mipmap/default_cover" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_music_name1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/load1"
                    android:textColor="@color/textColor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_music_name2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/load2"
                    android:textColor="@color/textColor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_music_name3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/load3"
                    android:textColor="@color/textColor"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>


        <View
            android:id="@+id/v_online_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/divider" />
    </LinearLayout>
</FrameLayout>